<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight=".3">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.daimajia.slider.library.Indicators.PagerIndicator
                android:id="@+id/custom_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginRight="@dimen/five"
            android:layout_weight=".7"
            android:orientation="vertical"
            android:weightSum="8">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/max_guest"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/booked_guest"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/food_starter"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/food_main"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/food_desered"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/food_special"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="2" />

        </LinearLayout>


    </LinearLayout>


    <ImageButton
        android:layout_width="@dimen/fifty"
        android:layout_height="@dimen/fifty"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/thirty"
        android:layout_marginRight="@dimen/thirty"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />


</RelativeLayout>
